MMA-6563 Flyttet findAllJournalpostIdsByDokumentInfoId fra JournalpostRepository til JournalpostDokumentInfoRelasjonRepository